Update to add trivia game

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="Unit_1.html">Unit 1</a>
       <a href="">Unit 2</a>
       <a href="">Unit 3</a>
-      <a href="">Unit 4</a>
+      <a href="game.html">Trivia Game</a>
       <a href="">Dino Game</a>
       <a href="">About Me</a>
     <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search.." title="Enter a keyword">
